# Projeto-Escultor-3D

./: CMakeLists.txt  README.md  cutbox.cpp  cutbox.h  cutelipsoide.cpp  cutelipsoide.h  cutsphere.cpp  cutsphere.h  cutvoxel.cpp  cutvoxel.h  figurageometrica.h  leituraarquivo.cpp  leituraarquivo.h  main.cpp  putbox.cpp  putbox.h  putelipsoide.cpp  putelipsoide.h  putsphere.cpp  putsphere.h  putvoxel.cpp  putvoxel.h  sculptor.cpp  sculptor.h  voxel.h
arquivo/: arquivo.txt  microfone.off
